--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   react-service:
     build: 
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./docker/react/Dockerfile
     ports:
       - 3000:3000
     container_name: react
