--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: react
     stdin_open: true
     volumes:
-      - .:/usr/src/app
+      - ./app:/usr/src/app
       - /usr/src/app/node_modules
     networks:
       - react
