(fix) expose port 3000

--- a/docker/react/Dockerfile
+++ b/docker/react/Dockerfile
@@ -4,12 +4,6 @@ WORKDIR /app
 
 COPY /app .
 
-RUN npm ci
+RUN yarn
 
-RUN npm run build
-
-ENV NODE_ENV production
-
-EXPOSE 3000
-
-CMD [ "npx", "serve", "build" ]
+CMD ["yarn", "dev"]
