--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,17 @@ services:
     build: 
       context: .
       dockerfile: ./docker/react/Dockerfile
+    #image: node:18
     ports:
       - 3000:3000
     container_name: react
     stdin_open: true
     volumes:
       - ./app:/app
-      - /app/node_modules
+    #  - /app/node_modules
     networks:
       - react
+    #command: 
+    #  - sh
+    #  - -c
+    #  - "cd /app && yarn install && yarn dev"
